# anaconda-to-miniconda

./:  pyproject.toml  .actrc  .coveragerc  .env.local.example  .github-actions-validator.toml  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  .pymarkdown.json  .yamllint  =8.0.0  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_MANAGEMENT.md  GITHUB_ACTIONS_IMPROVEMENTS.md  GITHUB_ACTIONS_LOCAL.md  GITHUB_ACTIONS_VALIDATION.md  GITHUB_ACTIONS_VALIDATION_README.md  LICENSE  README.md  SECURITY.md  TEST_COVERAGE.md  VERSION_MANAGEMENT.md  act-custom-images.config  activate-venv.bat  code-quality-improvements.md  demo-config.json  github-actions-analysis.md  github-actions-guide.md  github-actions-local-testing-plan.md  github-actions-local.ps1  github-actions-local.sh  github-actions-priority-improvements.md  github_actions_validation_plan.md  mkdocs.yml  my-config.json  push.json  pyproject.toml  pyrightconfig.json  (+26 more)
.github/: CONTRIBUTING.md  SECURITY.md  actionlint.yaml  changelog_template.md  commit-template.txt  dependabot.yml  local-secrets.json.template  pre-commit-workflow-hooks.yaml  pull_request_template.md  release-drafter.yml  setup-workflows.ps1  setup-workflows.sh  workflow-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  issue.md  sysadmin_issue.md  user_issue.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  config.yml  documentation.md  feature.md  refactor.md
.github/actions/diagnostic-info/: action.yml
.github/actions/mock-service/: action.yml
.github/actions/run-linting/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/setup-python-env/: action.yml
.github/events/templates/: pull_request.json  push.json
.github/local-testing/: README.md  act-runner.ps1  branch-protection-local.yml  ci-local.yml  cleanup.ps1  github-actions-environments.md  github-workflow-validation.md  local-test.ps1  local-test.sh  matrix-python311.json  matrix-python312.json  test-python-versions.ps1  test-python-versions.sh  test-workflow.ps1  test-workflow.sh  validate-workflow.ps1  validate-workflow.sh  windows-setup-guide.md
.github/local-testing/events/: pull_request.json  pull_request.json.example  push-main.json  push.json  push.json.example  workflow_dispatch.json
.github/scripts/: check-shellcheck-installed.ps1  check-shellcheck-installed.sh  check-workflow-references.py  check-workflow-references.sh  check-workflow-shellcheck.sh  check_python_compatibility.py  github-actions-test.ps1  github-actions-test.sh  initialize-gh-pages.sh  pre-push-check.sh  pre-push.sh  test-github-actions.ps1  test-github-actions.sh  test-python-versions.ps1  test-python-versions.sh  validate-composite-actions.py  validate-composite-actions.sh  validate-github-actions.py  validate-workflow.ps1  validate-workflow.sh  validate-workflows-hook.sh
.github/templates/python/: ci.yml
.github/workflows/: GITHUB_ACTIONS_LOCAL.md  README.md  benchmark.yml  branch-protection.yml  ci-act-compatible.yml  ci-local-compatible.yml  ci.yml  ci.yml.example  docs-quality.yml  docs.yml  initialize-gh-pages.yml  local-test.sh  maintenance.yml  release.yml  sample-act-compatible.yml  sample-local-testing.yml  security-scan.yml  test-fixes.yml  test-release.ps1  test-shellcheck.yml  test.yml  validate-all-workflows.yml  validate-github-actions.yml  validate-workflows.yml  version-bump.yml
docs/: 404.md  README.md  TODO.md  architecture.md  improvement-plan.md  index.md  simplification-summary.md
docs/about/: changelog.md  license.md
docs/api/: cli.md  core.md  health.md  incremental.md  index.md  reporting.md  utils.md
docs/design/: error-handling.md  improvements.md  overview.md  package-resolution.md  system-design.md
docs/dev/: README.md  architecture.md  benchmarks.md  build-tools.md  cli-documentation-guide.md  contributing.md  conventional-commits.md  development-guide.md  doc-contributing.md  docstring-documentation-guide.md  documentation-improvements.md  documentation.md  pr-process.md  quick-reference.md  releasing.md  setup.md  testing.md  vscode-debugging.md  workflow.md
docs/templates/: standard_doc_template.md
docs/user/: cli-admin-guide.md  cli-cheatsheet.md  cli-quick-reference.md  cli-reference.md  faq.md  getting-started.md  glossary.md  root-user-guide.md  troubleshooting.md  validation.md  workflows.md
examples/: validate_converted_env.py  validation_script_template.py
requirements/: ci-requirements.txt  dev-requirements.txt  requirements.txt  test-requirements.txt
scripts/: cleanup_docs.py  install_package.py  setup_dev.sh  setup_git_hooks.py  setup_vscode.py  update_coverage_threshold.py  update_deps.py  validate_release.py
src/conda_forge_converter/: __init__.py  __main__.py  _version.py  caching.py  cleanup.py  cli.py  conda_forge_converter.py  core.py  exceptions.py  health.py  incremental.py  progress.py  reporting.py  utils.py  validation.py
src/github_actions_validator/: CONTRIBUTING.md  README.md  __init__.py  cli.py  config.py  discovery.py  error_handling.py  errors.py  logging.py
src/github_actions_validator/docs/: matrix_jobs.md  troubleshooting.md
src/github_actions_validator/examples/: pre-commit-hooks.yaml  validate_workflows.py
src/github_actions_validator/runners/: __init__.py  act.py
src/github_actions_validator/validators/: __init__.py  act.py  (+3 more)
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_caching.py  test_cli.py  test_cli_performance.py  test_core.py  test_coverage.py  test_discovery.py  test_error_handling.py  test_error_handling_extended.py  test_errors.py  test_github_actions_validator.py  test_health.py  test_incremental.py  test_integration.py  test_main.py  test_ownership.py  test_performance_improvements.py  test_replacement.py  test_reporting.py  test_utils.py  test_validation.py  test_validators_act.py  test_validators_actionlint.py  test_validators_execution.py  test_version.py  test_vscode_setup.py
tests/benchmarks/: test_basic_benchmarks.py  test_converter_benchmarks.py
(+1 files in other folders)
